--- a/notes/操作系统基础.md
+++ b/notes/操作系统基础.md
@@ -4,7 +4,7 @@
 
 ### 操作系统层次结构
 
-![image-20220411114253131](../images/操作系统基础Assets/os-structure.png)
+![image-20220411114253131](https://xingqiu-tuchuang-1256524210.cos.ap-shanghai.myqcloud.com/205/os-structure.png)
 
 ### 概念
 
@@ -184,7 +184,7 @@ Step 4：开始和朋友视频聊天
 
 实现操作系统内核功能的那些程序就是内核程序。
 
-![image-20220411124657314](../images/操作系统基础Assets/os-structureDeail.png)
+![image-20220411124657314](https://xingqiu-tuchuang-1256524210.cos.ap-shanghai.myqcloud.com/205/os-structureDeail.png)
 
 操作系统内核
 
