--- a/notes/计算机网络总结.md
+++ b/notes/计算机网络总结.md
@@ -1,8 +1,44 @@
 **自顶向下**
 
+# 概述
+
+## 概念
+
+**因特网**
+
+其一，我们能够描述因特网的具体构成，即构成因特网的基本硬件和软件组件；
+
+> 因特网是一个世界范围的计算机网络，即它是一个互联了遍及全世界数十亿计算设备的网络
+
+其二，我们能够根据为分布式应用提供服务的联网基础设施来描述因特网
+
+
+
+**主机（host）或端系统（end system）**
+
+传统的桌面PC、Linux 工作站、智能手机、平板电脑、电视、游戏机、温度调节装置等
+
+端系统通过**通信链路（communication link）**和**分组交换机（packet switch）**连接到一起
+
+
+
+**分组交换机**
+
+**路由器（router）**和**链路层交换机（link-layer switch）**。这两种类型的交换机朝着最终目的地转发分组
+
+链路层交换机通常用于**接入网**中，而路由器通常用于**网络核心**中
+
 # 应用层
 
+## DNS
 
+### DNS寻址过程？
+
+1. 本地host文件
+2. 本地DNS解析器缓存
+3. 本地DNS服务器
+4. 根域名DNS服务器
+5. 递归的去找到包含目标IP的DNS服务器
 
 
 
