--- a/notes/计算机组成原理.md
+++ b/notes/计算机组成原理.md
@@ -1,5 +1,7 @@
 国家精品课程：华中科技大学 谭志虎
 
+计算机组成原理 唐朔飞
+
 # 前言
 
 ## 为什么要学习计算机组成原理
@@ -419,3 +421,288 @@ M:尾数位数,决定数的精度
 ### 数据校验的必要性
 
 受元器件的质量、电路故障或噪音干扰等因素的影响,数据在被处理、传输、存储的过程中可能出现错误;
+
+若能设计硬件层面的错误检测机制,可以减少基于软件检错的代价(系统观)。
+
+### 校验基本原理
+
+**增加冗余码（校验位）**
+
+有效信息(k位) 校验信息(r位)
+
+发送方对于发送的信息基于校验位去做某种运算得到一个编码，这里的编码既包括原始的数据，也包括基于规则计算出来的信息。接收方根据收到的信息和校验位再去执行与发送方相关的计算，去评测收到的这个数据是否出现错误。
+
+不同校验编码有不同的检测能力
+
+
+
+**码距**：同一编码中，任意两个合法编码之间**不同二进数位数的最小值**
+
+0011与00Q1的码距为1 , 一位错误时无法识别
+
+校验码中增加冗余项的目的就是为了增大码距.
+
+**码距与检错纠错能力的关系**
+
+> 为什么是这样？
+
+![image-20220419211142871](https://xingqiu-tuchuang-1256524210.cos.ap-shanghai.myqcloud.com/205/image-20220419211142871.png)
+
+1)码距≥e+1
+
+可检测e个错误
+
+码距>=2t+1
+
+可纠正t个错误
+
+3)码距≥e+t+1
+
+可纠正t个错误,同时检测e个错误(e≥t)
+
+码距越大,抗干扰能力越强,纠错能力越强,数据冗余越大编码效率低,编码电路也相对复杂;
+
+选择码距必须考虑信息发生差错的概率和系统能容许的最小差错率
+
+## 奇偶校验
+
+奇偶校验的基本原理：校验位一位
+
+![image-20220419211914480](https://xingqiu-tuchuang-1256524210.cos.ap-shanghai.myqcloud.com/205/image-20220419211914480.png)
+
+**编码**：根据有效信息计算校验信息位,使校验码(数据+1位校验信息)中**1的个数满足奇/偶校验的要求**
+
+“1”的个数满足奇偶校验的特征。
+
+0001-->0001**1**(使得为偶校验)
+
+0001-->0001**0**(使得为奇校验)
+
+
+
+**奇偶校验特点**：
+
+- 编码与检错简单
+- 编码效率高
+- 不能检测偶数位错误
+- 不能定位错误，没有纠错能力
+
+发现不了以下的错误
+
+![image-20220420145212817](../images/计算机组成原理Assets/image-20220420145212817.png)
+
+
+
+**改进奇偶校验**
+
+双向奇偶校验
+
+可纠正1位错误
+
+![image-20220420145908358](../images/计算机组成原理Assets/image-20220420145908358.png)
+
+可检测出某行(列)_上的奇数位;
+
+![image-20220420145956509](../images/计算机组成原理Assets/image-20220420145956509.png)
+
+可检出一部分偶数位错误
+
+![image-20220420150018460](../images/计算机组成原理Assets/image-20220420150018460.png)
+
+不能检测出错码分布在矩形4个顶点上的错误
+
+![image-20220420150043922](../images/计算机组成原理Assets/image-20220420150043922.png)
+
+**奇偶校验应用**
+
+数字奇偶校验要实现到9位，9个颗粒的内存条
+
+一般在同步传输方式中常采用奇校验 ,异步传输方式中常采用偶校验
+
+## CRC校验
+
+增加冗余码：校验信息(r位)
+
+有效信息k位
+
+**N=k+r≤2^r- 1**
+
+一共设置r位校验位能够表示出2^r中状态，其中一种状态没有错误
+
+
+
+**生成多项式**G(x)
+
+收发双方约定的一一个(r + 1)位二进制数,发送方利用G(X)对信息多项式做模2除运算,生成校验码。接收方利用G(X)对收到的编码多项式做**模2除运算**检测差错及错误定位。
+
+
+
+**G(x)应满足的条件**
+
+- 最高位和最低位必须为1
+- 当被传送信息( CRC码)任何- -位发生错误时,被生成多项式做除后应该使余数不为0
+- 不同位发生错误时，模2除运算后余数不同
+- 对不为0余数继续进行模2除运算应使余数循环.
+
+
+
+**模2运算规则**
+
+加/减运算(异或运算,加不进位, 减不借位)
+
+0+0=0，0+1=1，1+0=1, 1+1=0，减法也相同
+
+**模2除法**
+
+按模2减,求部分余数，不借位。
+
+. 上商原则
+
+- 部分余数首位为1时，商为1，减除数;
+- 部分余数首位为0时，商为0，减0 ;
+- 当部分余数的位数小于除数的位数时，该余数即为最后余数。
+
+模二除法示例![image-20220420151342805](../images/计算机组成原理Assets/image-20220420151342805.png)
+
+
+
+**CRC检错与纠错**
+
+接收方利用G(X)对收到的编码多项式做模2除运算，**余数为0说明传输没有错误**
+
+
+
+CRC应用标准非常多
+
+## 海明校验
+
+有效信息k位，校验信息r位
+
+设k+ r位海明码从左到右依次为第1 , 2 , 3, .... k+r位, r位校验位记为P;(i=1, 2 , ... r) ,分别位于k+ r位海明编码的第2^i-1 ( i=1 , 2, ...，r)位上，其余位依次放置被校验的数据位;
+
+举例![image-20220420152659945](../images/计算机组成原理Assets/image-20220420152659945.png)
+
+Hj位的数据被编号小于j的若干个海明位号之和等于j的校验位所校验
+
+![image-20220420152946301](../images/计算机组成原理Assets/image-20220420152946301.png)
+
+海明校验码举例：
+
+![image-20220420153446953](../images/计算机组成原理Assets/image-20220420153446953.png)
+
+> 异或操作
+
+**海明校验码指错字为零并不一定代表没有错误**
+
+一位错和两位错不能由指错字区别
+
+# 第三章 运算方法与运算器
+
+## 定点数的计算
+
+### 定点数的加法运算
+
+![image-20220420154419974](../images/计算机组成原理Assets/定点数加法运算.png)
+
+n是字长
+
+**算法理解**
+
+- 补码进行运算有很多优点
+- 在进行计算的时候千万不要直接用二进制数去计算，一定要先变成补码
+
+eg![image-20220420154805296](../images/计算机组成原理Assets/image-20220420154805296.png)
+
+### 定点数减法运算
+
+![image-20220420154852883](../images/计算机组成原理Assets/定点数减法运算.png)
+
+基于加法器实现减法和加法
+
+
+
+**规律**
+
+通过右向左扫描[Y]补，在遇到数字1及之前 ，直接输出遇到的数字遇到1之后,取反输出，即可得到[-Y]补，反之亦然
+
+### 数溢出的概念及其判断方法
+
+**溢出**：运算结果超出了某种数据类型的表示范围。
+
+溢出检测方法：溢出只可能发生在同符号数相加时,包括[X]补与[Y]补; [X]补 与[-Y]同号
+
+**方法1** :对操作数和运算结果的符号位进行检测
+
+当结果的符号位与操作数的符号不相同时就表明发生了溢出
+
+**方法2** :对最高数据位进位和符号进位进行检测
+
+**方法3** :用变型补码，双符号位
+
+
+
+**溢出判断的软件方法**
+
+![image-20220420155848135](../images/计算机组成原理Assets/image-20220420155848135.png)
+
+对于流水线会引起停顿
+
+
+
+**无符号数溢出的判断**
+
+无符号数加法的溢出可用ALU的进位表示
+
+无符号数减法的溢出也可用带加/减功能的ALU的进位取反后表示。
+
+## 定点数补码加、减运算器设计
+
+## 原码一位乘法
+
+**移位操作及其意义**
+
+**逻辑左移**：![image-20220420161559780](../images/计算机组成原理Assets/逻辑左移.png)
+
+数据整体左移位,最高位D15被移出至CF ,最低位D1补0
+
+移位前01101110
+
+逻辑左移后 0 11011100
+
+**算术左移**
+
+![image-20220420161727387](../images/计算机组成原理Assets/image-20220420161727387.png)
+
+数据整体左移-位，最高位D15被移至Cf , 最低位D1补0
+
+移位前 01101110
+
+逻辑左移后 0 11011100
+
+**相当于乘二**
+
+
+
+**逻辑右移**
+
+数据整体右移一位,最高位D15补0 ,最低位D1被移出
+
+**算术右移相当于除二**
+
+
+
+**二进制乘法计算**
+
+![image-20220420162245756](../images/计算机组成原理Assets/二进制乘法计算.png)
+
+- 采用累加的方法
+
+
+
+符号位单独参加运算,数据位取绝对值参加运算
+
+**运算法则**
+
+![image-20220420162634209](../images/计算机组成原理Assets/image-20220420162634209.png)
+
+运算过程采用改进的乘法运算方法。
