--- a/notes/计算机组成原理.md
+++ b/notes/计算机组成原理.md
@@ -657,7 +657,7 @@ eg![image-20220420154805296](../images/计算机组成原理Assets/image-2022042
 
 ## 定点数补码加、减运算器设计
 
-## 原码一位乘法
+## 原码一位乘法:pensive:
 
 **移位操作及其意义**
 
@@ -706,3 +706,339 @@ eg![image-20220420154805296](../images/计算机组成原理Assets/image-2022042
 ![image-20220420162634209](../images/计算机组成原理Assets/image-20220420162634209.png)
 
 运算过程采用改进的乘法运算方法。
+
+## 补码——位乘法:pensive:
+
+![image-20220426193353987](../images/计算机组成原理Assets/image-20220426193353987.png)
+
+补码运算的特点，符号位参加了运算
+
+
+
+## 乘法运算器的设计
+
+**原码——位乘法器设计**
+
+![image-20220426194048447](../images/计算机组成原理Assets/image-20220426194048447.png)
+
+
+
+
+
+
+
+# 第四章 存储系统
+
+## 存储为核心？
+
+I/O与存储器直接存取方式(DMA)
+
+各处理机在相互通信中，需要共享存放在存储器中的数据
+
+## 存储系统层次结构
+
+> Redis为什么快？
+
+**基本存储体系**
+
+**原理**：
+
+- 存储程序----->主存
+- 程序控制----->CPU
+
+1. 输入设备将程序与数据写入主存
+2. CPU读取指令
+3. CPU执行指令期间读数据
+4. CPU回写运算结果
+5. 输出设备输出结果
+
+
+
+**问题**：
+
+1. 主存速度慢的原因
+   1. 主存增速与CPU增速不同步
+   2. 指令执行期间多次访问存储器
+2. 主存容量不足的原因
+   1. 存在制约主存容量的技术因素
+   2. 应用对主存的需求不断扩大
+   3. 价格原因
+
+**解决**：构建存储层次化结构
+
+![image-20220426195110889](../images/计算机组成原理Assets/image-20220426195110889.png)
+
+
+
+从CPU与其它存储器的角度看：CPU访问到的存储系统具有Cache的速度，辅存的容量和价格
+
+在主存一辅存这一层次的不断发展中，形成了**虚拟存储系统**。对具有虚拟存储器的计算机系统而言，编程时可用的地址空间远远大于主存空间
+
+**存储层次结构演化**
+
+增加了L1 Cache和L2 Cache
+
+- L1 Cache集成在CPU中,分数据Cache(D-Cache)和指令Cache(I-Cache )
+- 早期L2 Cache在主板上或与CPU集成在同一-电路板上。随着工艺的提高L2Cache被集成在CPU内核中，不分D-Cache和I-Cache
+
+
+
+**存储体系层次化结构的理论基础**
+
+局部性原理
+
+- 时间局部性
+  - 现在被访问的信息在不久的将来还将再次被访问
+  - 结构体现：循环结构
+- 空间局部性
+  - 现访问信息2，下一次访问2附近的信息
+  - 结构体现：顺序结构
+
+## 存储器分类
+
+### 按在计算机中的作用(层次分类)
+
+**主存储器：**
+
+主存储器。简称主存，又称内存储器(内存)，用来存放计算机运行期间所需的程序和数据，CPU可以直接随机地对其进行访问，也可以和高速缓冲存储器(Cache)及辅助存储器交换数据。其特点是容量较小、存取速度较快、每位的价格较高。
+
+**辅助存储器**。
+
+简称辅存，又称外存储器(外存)，用来存放当前暂时不用的程序和数据，以及一些需要永久性保存的信息。辅存的内容需要调入主存后才能被CPU访问。其特点是容量大、存取速度较慢、单位成本低。
+
+**高速缓冲存储器**。
+
+简称Cache,位于主存和CPU之间，用来存放当前CPU经常使用的指令和数据，以便CPU能高速地访问它们。Cache的存取速度可与CPU的速度相匹配，但存储容量小、价格高。现代计算机通常将它们制作在CPU中。
+
+### 按存储介质分类
+
+存储介质是指能寄存“0”、“1”两种代码并能区别两种状态的物质或元器件。存储介质主要有半导体器件、磁性材料和光盘等。
+
+**半导体存储器：**
+
+由半导体器件组成的叫半导体存储器。优点是体积小、功耗低、存取时间短。电源消失存储信息丢失，近年有非易失型
+
+**磁表面存储器**
+
+磁表面存储器是在金属或塑料基体的表面上涂- - 层磁性材料作为记录介质，非易失
+
+**磁芯存储器**
+
+磁芯是由硬磁材料做成的环状元件，在磁心中穿有驱动线(通电流)和读出线，这样便可进行读写操作。不易失的永久记忆。磁心存储器的体积过大、工艺复杂、功耗太大
+
+**光盘存储器**
+
+光盘存储器是应用激光在记录介质(磁光材料)。上进行读写 的存储器,非易失，光盘记录密度高、耐用性好、可靠性高和可互换性强
+
+### 按存取方式分类
+
+**随机存储器RAM (Random Access Memory)**
+
+RAM是一种**可读写**存储器
+
+特点：存储单元内容随机存取；
+
+计算机中主存采用RAM
+
+由于存储信息原理的不同,RAM又分为静态RAM(以触发器原理寄存信息)和动态RAM (以电容充放电原理寄存信息)。
+
+
+
+**只读存储器ROM (Read Only Memory)**
+
+ROM只读不可写入，断电内容也不会丢失
+
+通常用它存放固定不变的程序、常数以及汉字字库，甚至用于操作系统的固化。它与随机存储器可共同作为主存的部分， 统“构成**主存的地址域**。
+
+
+
+**串行访问存储器**。
+
+对存储单元进行读/写操作时，需按其物理位置的先后顺序寻址，包括顺序存取存储器(如磁带)与直接存取存储器(如磁盘、光盘)。
+
+顺序存取存储器的内容只能按某种顺序存取，存取时间的长短与信息在存储体上的物理位置有关，其特点是存取速度慢。直接存取存储器既不像RAM那样随机地访问任何一一个存储单元，又不像顺序存取存储器那样完全按顺序存取，而是介于两者之间。存取信息时通常先寻找整个存储器中的某个小区域( 如磁盘上的磁道)，再在小区域内顺序查找。
+
+### 按信息的可保存性分类
+
+断电后，存储信息即消失的存储器，称为**易失性存储器**，如RAM。
+
+断电后信息仍然保持的存储器，称为**非易失性存储器**，如ROM、磁表面存储器和光存储器。
+
+若某个存储单元所存储的信息被读出时，原存储信息被破坏，则称为**破坏性读出**;
+
+若读出时，被读单元原存储信息不被破坏，则称为**非破坏性读出**。具有破坏性读出性能的存储器，每次读出操作后，必须紧接-一个再生的操作，以便恢复被破坏的信息。
+
+## 存储器性能指标
+
+**存储容量**=存储字数x字长(如1Mx8 位)。单位换算: 1B (Byte, 字节) = 8b (bit,位)。存储字数表示存储器的地址空间大小，字长表示一次存取操作的数据量。
+
+**地址线和数据线的位数共同反映存储芯片的容量**：地址线为10根，数据线为4根，则芯片容量为2^10*4=4K位
+
+**单位成本**:每位价格=总成本/总容量。
+
+**存储速度**:数据传输率=数据的宽度/存储周期。
+
+**存取时间(T)**:存取时间是指从**启动一次存储器操作到完成该操作所经历的时间**,分为读出时间和写入时间。
+
+**存取周期(Tm)**: 存取周期又称读写周期或访问周期。它是指存储器进行- -次完整的读写操作所需的全部时间，即连续两次独立访问存储器操作(读或写操作)之间所需的最小时间间隔。
+
+**主存带宽(Bm**):主存带宽又称数据传输率，表示**每秒从主存进出信息的最大数量**,单位为字/秒、字节/秒(B/s) 或位/秒(b/s)。
+
+存取时间不等于存储周期，通常存储周期大于存取时间。这是因为对任何- -种存储器，在读写操作之后，总要有-段恢复内部状态的复原时间。对于破坏性读出的存储器，存取周期往往比存取时间大得多，甚至可达Tm= 2T，因为存储器中的信息读出后需要马上进行再生。
+
+## 主存储器
+
+### 概述
+
+MAR中的地址访问某个存储单元时，还需经过地址译码、驱动等电路，才能找到所需访问的单元。读出时，需经过读出放大器，才能将被选中单元的存储字送到MDR。写入时，MDR中的数据也必须经过写入电路才能真正写入到被选中的单元中。
+
+![image-20220426210548044](../images/计算机组成原理Assets/image-20220426210548044.png)
+
+### 主存中的数据组织
+
+#### 存储字长
+
+概念：主存的一个存储单元所包含的二进制位数
+
+目前大多数计算机的主存**按字节编址**,存储字长也不断加大，如16位字长、32位字长和64位字长
+
+
+
+ISA（Instruction Set Architecture 指令集架构）设计时要考虑的两个问题：
+
+a)如何根据字节地址读取- -个32位的字? -字的存放问题
+
+b)一个字能否存放在主存的任何字节边界?-字的边界对齐问题
+
+#### 数据存储与边界的关系
+
+**1)按边界对齐的数据存储**
+
+![image-20220426200405188](../images/计算机组成原理Assets/image-20220426200405188.png)
+
+边界对齐会导致部分空间的浪费
+
+**2)未按边界对齐的数据存储**
+
+![image-20220426200536594](../images/计算机组成原理Assets/image-20220426200536594.png)
+
+虽节省了空间,但增加了访存次数
+
+需要在性能与容量间权衡
+
+> 变量x访问次数从两次变成了三次
+
+**3)边界对齐与存储地址的关系(以32位为例)**
+
+![image-20220426200910274](../images/计算机组成原理Assets/image-20220426200910274.png)
+
+- 双字长数据边界对齐的起始地址的最末三位为00(8字节整数倍	？？
+- 单字长边界对齐的起始地址的末二位为00(4字节整数倍)   ？？
+- 半字长边界对齐的起始地址的最末一 位为0( 2字节整数倍)  ？？
+
+
+
+**考虑下列两个结构声明**：
+
+![image-20220426201424750](../images/计算机组成原理Assets/image-20220426201424750.png)
+
+![image-20220426201505765](../images/计算机组成原理Assets/image-20220426201505765.png)
+
+S1中由于要保证边界对齐，因此要按上图中的排列方式
+
+![image-20220426201642735](../images/计算机组成原理Assets/image-20220426201642735.png)
+
+这样去对比，S2的存储排列并没有比S1好多少
+
+#### 大端与小端存储方式
+
+**Big-endian:最高字节地址(MSB)是数据地址**
+
+![image-20220426202014248](../images/计算机组成原理Assets/image-20220426202014248.png)
+
+**Little-endian:最低字节地址(L SB)是数据地址**
+
+![image-20220426202043701](../images/计算机组成原理Assets/image-20220426202043701.png)
+
+### 随机存取存储器
+
+#### 一些概念
+
+**高电平**，指的是与[低电平](https://baike.baidu.com/item/低电平/6946314)相对的[高电压](https://baike.baidu.com/item/高电压/2278971)，是电工程上的一种说法。在逻辑电平中，保证逻辑门的输入为高电平时所允许的最小输入高电平，当输入电平高于输入高电压（Vih）时，则认为输入电平为高电平。
+
+#### 静态RAM (Static RAM或记作SRAM)
+
+触发器工作原理存储信息
+
+通常把存放一个二进制位的物理器件称为存储元，它是存储器的最基本的构件。地址码相同的多个存储元构成-一个存储单元。若干存储单元的集合构成存储体。
+
+静态随机存储器(SRAM)的存储元是用双稳态触发器(六晶体管MOS)来记忆信息的, 因此即使信息被读出后，它仍保持其原状态而不需要再生(非破坏性读出)。
+
+SRAM的存取速度快，但集成度低，功耗较大，价格昂贵，- 般用于高速缓冲存储器。
+
+##### **SRAM存储单元工作原理**
+
+![image-20220426212405813](../images/计算机组成原理Assets/image-20220426212405813.png)
+
+**说明**
+
+<img src="../../../TyporaAssets/计算机组成原理/image-20220426212432434.png" alt="image-20220426212432434" style="zoom:50%;" />
+
+<img src="../../../TyporaAssets/计算机组成原理/image-20220426212825899.png" alt="image-20220426212825899" style="zoom:67%;" />
+
+![image-20220426213218501](../images/计算机组成原理Assets/image-20220426213218501.png)
+
+数据写入后自然可被读出来
+
+
+
+![image-20220426213332102](../images/计算机组成原理Assets/image-20220426213332102.png)
+
+无论是读/写,都要求X和Y译码线同时有效
+
+如果不是同时有效，无法同时打开，T5、6、7、8四个门控管，不能实现存储单元与外界的联系
+
+
+
+![image-20220426213609616](../images/计算机组成原理Assets/image-20220426213609616.png)
+
+##### 静态存储器的结构
+
+![image-20220426213754111](../images/计算机组成原理Assets/image-20220426213754111.png)
+
+单译码结构中，要同时连接X选通和Y选通，这样才能选中对应存储单元
+
+
+
+![image-20220426213959582](../images/计算机组成原理Assets/image-20220426213959582.png)
+
+双译码结构可以减少译码线的数量
+
+
+
+![image-20220426214123939](../images/计算机组成原理Assets/image-20220426214123939.png)
+
+片选信号有效时整个存储器才会工作
+
+
+
+写操作WE非、读操作OE非为底电平有效
+
+接地信号GND  
+
+![image-20220426214553474](../images/计算机组成原理Assets/image-20220426214553474.png)
+
+
+
+![image-20220426214649530](../images/计算机组成原理Assets/image-20220426214649530.png)
+
+2114
+
+![image-20220426214709105](../images/计算机组成原理Assets/image-20220426214709105.png)
+
+行选择10根
+
+
+
+##### 
+
